<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">筱柔專屬</string>
    <string name="greetings">Dear 筱柔</string>
    <string name="message1">這是我第一個在手機上寫的APP</string>
    <string name="message2">同時也是專屬於妳的生日禮物</string>
    <string name="message3">以這份全世界唯一的禮物</string>
    <string name="message4">祝福妳身體健康　事事順心</string>
    <string name="message5">希望妳會喜歡 ^_^</string>
    <string name="signature">逸華 2014.05.24</string>

</resources>
